# docker-cloud

./: README.md  setup.cfg  setup.py
aminatorplugins/: __init__.py
aminatorplugins/cloud/: docker.py
aminatorplugins/finalizer/: docker.py
aminatorplugins/volume/: docker.py
