[metadata]
name = aminatorplugins_cloud_docker
version = 0.1.0
author = Netflix Engineering Tools
author_email = talent@netflix.com
packages = find_packages(exclude=exclude_packages)
package_data = package_data
package_dir = {'aminatorplugins': 'aminatorplugins'}
include_package_data = True
zip_safe = False
install_requires = requires
entry_points = entry_points
license = NFLX

[files]
packages =
    aminatorplugins

[entry_points]
aminator.plugins.cloud =
    docker = aminatorplugins.cloud.docker:DockerCloudPlugin
aminator.plugins.volume =
    docker = aminatorplugins.volume.docker:DockerVolumePlugin
aminator.plugins.finalizer =
    docker = aminatorplugins.finalizer.docker:DockerFinalizerPlugin
